--- a/security/mit-krb5/Makefile
+++ b/security/mit-krb5/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.119 2024/07/22 06:18:21 adam Exp $
+# $NetBSD: Makefile,v 1.120 2024/12/09 15:14:32 jperkin Exp $
 
 BRANCHNAME=	1.21
 DISTNAME=	krb5-${BRANCHNAME}.3
@@ -18,7 +18,10 @@ COMMENT=	MIT Kerberos 5 authentication system
 # license, which is not entirely clearly Free, by the text.
 #LICENSE=
 
-# \todo Debug and/or report upstream.
+# TODO: This is entirely caused by our libtool patches, which are also
+# actively harmful when trying to run the test suite.  They should really
+# be completely deleted and we instead homogenise shared objects to have
+# the same naming across all platforms.
 MAKE_JOBS_SAFE=	no
 
 WRKSRC=		${WRKDIR}/${DISTNAME}/src
