--- a/graphics/openjpeg/Makefile
+++ b/graphics/openjpeg/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2024/02/28 13:46:01 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/10 06:25:15 adam Exp $
 
-DISTNAME=	openjpeg-2.5.2
+DISTNAME=	openjpeg-2.5.3
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_GITHUB:=uclouvain/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
