--- a/net/py-lexicon/Makefile
+++ b/net/py-lexicon/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.93 2024/08/23 11:19:05 adam Exp $
+# $NetBSD: Makefile,v 1.94 2024/12/10 06:34:37 adam Exp $
 
-DISTNAME=	dns_lexicon-3.18.0
+DISTNAME=	dns_lexicon-3.19.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/dns_//}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/dns-lexicon/}
@@ -10,7 +10,7 @@ HOMEPAGE=	https://github.com/AnalogJ/lexicon
 COMMENT=	Manipulate DNS records on various DNS providers
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.2.0:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-beautifulsoup4>=4:../../www/py-beautifulsoup4
 DEPENDS+=	${PYPKGPREFIX}-dns>=2:../../net/py-dns
 DEPENDS+=	${PYPKGPREFIX}-importlib-metadata>=4:../../devel/py-importlib-metadata
@@ -18,6 +18,8 @@ DEPENDS+=	${PYPKGPREFIX}-otp>=2:../../security/py-otp
 DEPENDS+=	${PYPKGPREFIX}-requests>=2:../../devel/py-requests
 DEPENDS+=	${PYPKGPREFIX}-tldextract>=2:../../net/py-tldextract
 DEPENDS+=	${PYPKGPREFIX}-yaml>=3:../../textproc/py-yaml
+TEST_DEPENDS+=	${PYPKGPREFIX}-vcrpy-[0-9]*:../../www/py-vcrpy
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist-[0-9]*:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
 
