--- a/textproc/py-openapi-core/Makefile
+++ b/textproc/py-openapi-core/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2024/11/26 12:42:22 nia Exp $
+# $NetBSD: Makefile,v 1.18 2024/12/10 07:55:28 wiz Exp $
 
 DISTNAME=	openapi_core-0.19.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
@@ -23,17 +23,20 @@ DEPENDS+=	${PYPKGPREFIX}-werkzeug-[0-9]*:../../www/py-werkzeug
 TEST_DEPENDS+=	${PYPKGPREFIX}-WebOb-[0-9]*:../../www/py-WebOb
 TEST_DEPENDS+=	${PYPKGPREFIX}-aiohttp-[0-9]*:../../www/py-aiohttp
 TEST_DEPENDS+=	${PYPKGPREFIX}-django-[0-9]*:../../www/py-django3
-TEST_DEPENDS+=	${PYPKGPREFIX}-falcon-[0-9]*:../../devel/py-falcon
+#TEST_DEPENDS+=	${PYPKGPREFIX}-falcon-[0-9]*:../../devel/py-falcon
+TEST_DEPENDS+=	${PYPKGPREFIX}-fastapi-[0-9]*:../../wip/py-fastapi
 TEST_DEPENDS+=	${PYPKGPREFIX}-flask-[0-9]*:../../www/py-flask
+TEST_DEPENDS+=	${PYPKGPREFIX}-httpx-[0-9]*:../../www/py-httpx
 TEST_DEPENDS+=	${PYPKGPREFIX}-responses-[0-9]*:../../net/py-responses
-# TODO: starlette>=0.26.1
+TEST_DEPENDS+=	${PYPKGPREFIX}-starlette-[0-9]*:../../www/py-starlette
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-asyncio-[0-9]*:../../devel/py-test-asyncio
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-flake8-[0-9]*:../../devel/py-test-flake8
 
 USE_LANGUAGES=	# none
 
-# py-falcon
-PYTHON_VERSIONS_ACCEPTED=	312 311 310
+# as of 0.19.4 (with fastapi dependency)
+# 1361 passed, 20 xfailed, 65 errors
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
