--- a/time/py-ciso8601/Makefile
+++ b/time/py-ciso8601/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2023/10/31 20:41:51 adam Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/10 10:11:01 adam Exp $
 
-DISTNAME=	ciso8601-2.3.1
+DISTNAME=	ciso8601-2.3.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	time python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/ciso8601/}
@@ -10,10 +10,12 @@ HOMEPAGE=	https://github.com/closeio/ciso8601
 COMMENT=	Fast ISO8601 date time parser for Python written in C
 LICENSE=	mit
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+
 # error: 'for' loop initial declarations are only allowed in C99 mode
 FORCE_C_STD=	c99
 
-DEPENDS+=	${PYPKGPREFIX}-pytz-[0-9]*:../../time/py-pytz
+TEST_DEPENDS+=	${PYPKGPREFIX}-pytz-[0-9]*:../../time/py-pytz
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
