--- a/sysutils/py-eliot/Makefile
+++ b/sysutils/py-eliot/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/11/11 07:28:59 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/10 12:06:14 adam Exp $
 
-DISTNAME=	eliot-1.15.0
+DISTNAME=	eliot-1.16.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	sysutils python
 #MASTER_SITES+=	${MASTER_SITE_PYPI:=e/eliot/}
@@ -15,11 +15,10 @@ LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-boltons>=19.0.1:../../devel/py-boltons
+DEPENDS+=	${PYPKGPREFIX}-orjson-[0-9]*:../../textproc/py-orjson
 DEPENDS+=	${PYPKGPREFIX}-pyrsistent>=0.11.8:../../devel/py-pyrsistent
-DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
 DEPENDS+=	${PYPKGPREFIX}-zope.interface-[0-9]*:../../devel/py-zope.interface
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=1.14.0:../../devel/py-hypothesis
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist-[0-9]*:../../devel/py-test-xdist
 TEST_DEPENDS+=	${PYPKGPREFIX}-testtools-[0-9]*:../../devel/py-testtools
 
