--- a/databases/mariadb114-client/Makefile.common
+++ b/databases/mariadb114-client/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.2 2024/08/25 06:18:30 wiz Exp $
+# $NetBSD: Makefile.common,v 1.3 2024/12/11 10:32:04 nia Exp $
 #
 # used by databases/mariadb114-client/Makefile
 # used by databases/mariadb114-server/Makefile
 
-DISTNAME=	mariadb-11.4.3
+DISTNAME=	mariadb-11.4.4
 CATEGORIES=	databases
 MASTER_SITES=	https://archive.mariadb.org/${DISTNAME}/source/
 
