--- a/textproc/ruby-unicode-display_width/Makefile
+++ b/textproc/ruby-unicode-display_width/Makefile
@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.9 2024/09/22 07:37:32 taca Exp $
+# $NetBSD: Makefile,v 1.10 2024/12/11 14:04:58 taca Exp $
 
-DISTNAME=	unicode-display_width-2.6.0
+DISTNAME=	unicode-display_width-3.1.2
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/janlelis/unicode-display_width
 COMMENT=	Monospace Unicode character width in Ruby
 LICENSE=	mit
+
+DEPENDS+=	${RUBY_PKGPREFIX}-unicode-emoji>=4.0.4<5:../../textproc/ruby-unicode-emoji
 
 USE_LANGUAGES=	# none
 
