--- a/time/Makefile
+++ b/time/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.275 2024/08/15 21:56:25 wiz Exp $
+# $NetBSD: Makefile,v 1.276 2024/12/11 15:23:52 taca Exp $
 #
 
 COMMENT=	Clocks, calendars, daily planners and other time related applications
@@ -202,6 +202,7 @@ SUBDIR+=	rsclock
 SUBDIR+=	rsibreak
 SUBDIR+=	ruby-hitimes
 SUBDIR+=	ruby-iso8601
+SUBDIR+=	ruby-timeout
 SUBDIR+=	ruby-timers
 SUBDIR+=	ruby-tzinfo
 SUBDIR+=	ruby-tzinfo-data
