--- a/databases/ruby-activerecord71/Makefile
+++ b/databases/ruby-activerecord71/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1 2023/11/30 15:24:17 taca Exp $
+# $NetBSD: Makefile,v 1.2 2024/12/11 15:27:35 taca Exp $
 
 DISTNAME=	activerecord-${RAILS_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-activerecord${RUBY_RAILS}-${RAILS_VERSION}
+PKGREVISION=	1
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,6 +17,12 @@ USE_LANGUAGES=	# none
 
 RUBY_RAILS_ACCEPTED=	71
 RUBY_RAILS_STRICT_DEP=	yes
+
+.include "../../lang/ruby/rubyversion.mk"
+
+.if ${RUBY_VER} < 33
+DEPENDS+=	${RUBY_PKGPREFIX}-timeout>=0.4.0:../../time/ruby-timeout
+.endif
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
