--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1825 2024/12/11 15:44:29 taca Exp $
+# $NetBSD: Makefile,v 1.1826 2024/12/11 15:49:44 taca Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -1098,6 +1098,7 @@ SUBDIR+=	ruby-typhoeus
 SUBDIR+=	ruby-unicorn
 SUBDIR+=	ruby-uri
 SUBDIR+=	ruby-url_mount
+SUBDIR+=	ruby-useragent
 SUBDIR+=	ruby-webrick
 SUBDIR+=	ruby-webrobots
 SUBDIR+=	ruby-websocket
