--- a/finance/ledger/Makefile
+++ b/finance/ledger/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.38 2024/10/11 14:03:52 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2024/12/11 23:15:43 riastradh Exp $
 
 DISTNAME=	ledger-3.3.2
 PKGREVISION=	7
@@ -17,6 +17,8 @@ USE_CXX_FEATURES+=	c++11
 
 USE_LANGUAGES=	c c++
 TEST_TARGET=	check
+TEST_ENV+=	LD_LIBRARY_PATH=${WRKSRC:Q}/${CMAKE_BUILD_DIR:Q}
+TEST_ENV+=	DYLD_LIBRARY_PATH=${WRKSRC:Q}/${CMAKE_BUILD_DIR:Q}
 
 # https://github.com/ledger/ledger/issues/2332
 PYTHON_VERSIONS_ACCEPTED=	311 310	# PyUnicode_GET_SIZE
