--- a/audio/ncspot/Makefile
+++ b/audio/ncspot/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.73 2024/11/14 22:18:44 wiz Exp $
+# $NetBSD: Makefile,v 1.74 2024/12/12 07:28:21 pin Exp $
 
 DISTNAME=	ncspot-1.2.1
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=hrkfdn/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -12,6 +12,7 @@ COMMENT=	Cross-platform ncurses Spotify client written in Rust
 LICENSE=	2-clause-bsd
 
 TOOL_DEPENDS+=  cmake-[0-9]*:../../devel/cmake
+TOOL_DEPENDS+=	clang-[0-9]*:../../lang/clang
 
 .include "cargo-depends.mk"
 
@@ -20,12 +21,10 @@ TOOL_DEPENDS+=  cmake-[0-9]*:../../devel/cmake
 #This package is confirmed to build with Rust 1.82.0 on amd64
 USE_LANGUAGES+=			c c++
 USE_TOOLS+=			pkg-config
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 PYTHON_FOR_BUILD_ONLY=		tool
 
 MAKE_ENV+=	OPENSSL_DIR=${BUILDLINK_PREFIX.openssl:Q}
 RUSTFLAGS+=	-C link-arg=${COMPILER_RPATH_FLAG}${BUILDLINK_PREFIX.openssl}/lib
-RUSTFLAGS+=     -C link-arg=${COMPILER_RPATH_FLAG}${BUILDLINK_PREFIX.clang}/lib
 
 CARGO_NO_DEFAULT_FEATURES=	YES
 
@@ -34,5 +33,4 @@ CARGO_NO_DEFAULT_FEATURES=	YES
 .include "../../lang/python/tool.mk"
 .include "../../lang/rust/cargo.mk"
 .include "../../security/openssl/buildlink3.mk"
-.include "../../lang/clang/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
