--- a/net/netatalk4/Makefile
+++ b/net/netatalk4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2024/11/21 15:26:08 hauke Exp $
+# $NetBSD: Makefile,v 1.2 2024/12/12 08:25:34 hauke Exp $
 
 GITHUB_PROJECT=	netatalk
 GITHUB_TAG=	refs/tags/${DISTNAME}
@@ -23,6 +23,8 @@ PKG_SYSCONFSUBDIR=	netatalk
 EGDIR=			${PREFIX}/share/examples/netatalk
 CONF_FILES+=		${EGDIR}/afp.conf	${PKG_SYSCONFDIR}/afp.conf
 CONF_FILES+=		${EGDIR}/extmap.conf	${PKG_SYSCONFDIR}/extmap.conf
+
+DEPENDS+=		docbook-xsl-[0-9]*:../../textproc/docbook-xsl
 
 CONFLICTS=		netatalk22-[0-9]* netatalk30-[0-9]* netatalk3-[0-9]*
 CONFLICTS+=		netatalk-[0-9]* netatalk-asun-[0-9]* netatalk-umich-[0-9]*
@@ -143,6 +145,7 @@ BUILDLINK_API_DEPENDS.libevent+=        libevent>=2
 .include "../../security/openssl/buildlink3.mk"
 .include "../../security/tcp_wrappers/buildlink3.mk"
 .include "../../textproc/cmark-gfm/buildlink3.mk"
+.include "../../textproc/libxslt/buildlink3.mk"
 
 .include "../../mk/bdb.buildlink3.mk"
 
