--- a/security/putty/Makefile
+++ b/security/putty/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.87 2024/11/17 07:16:37 wiz Exp $
+# $NetBSD: Makefile,v 1.88 2024/12/12 15:29:09 ryoon Exp $
 
-DISTNAME=	putty-0.81
-PKGREVISION=	2
+DISTNAME=	putty-0.82
 CATEGORIES=	security
 MASTER_SITES=	http://the.earth.li/~sgtatham/putty/${PKGVERSION_NOREV}/
 
