--- a/chat/weechat/Makefile
+++ b/chat/weechat/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.153 2024/11/16 12:03:14 wiz Exp $
+# $NetBSD: Makefile,v 1.154 2024/12/12 15:45:47 ryoon Exp $
 
-DISTNAME=	weechat-4.3.5
-PKGREVISION=	4
+DISTNAME=	weechat-4.4.4
 CATEGORIES=	chat
 MASTER_SITES=	https://www.weechat.org/files/src/
 EXTRACT_SUFX=	.tar.xz
