--- a/devel/git-cinnabar/Makefile.common
+++ b/devel/git-cinnabar/Makefile.common
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.common,v 1.2 2024/12/05 01:19:26 riastradh Exp $
+#	$NetBSD: Makefile.common,v 1.3 2024/12/12 16:13:59 riastradh Exp $
 #
 
 # used by devel/git-cinnabar/Makefile
@@ -13,6 +13,8 @@ WRKSRC=		${WRKDIR}/${DISTNAME}
 
 HOMEPAGE=	https://github.com/glandium/git-cinnabar/
 LICENSE=	mpl-2.0 AND gnu-gpl-v2
+
+GITHUB_SUBMODULES=	git-for-windows git v2.46.2.windows.1 git-core
 
 DISTINFO_FILE=	${.CURDIR}/../../devel/git-cinnabar/distinfo
 PATCHDIR=	${.CURDIR}/../../devel/git-cinnabar/patches
